# mini_kv

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  START_HERE.md  代码讲解记录_总索引.md  解释代码格式说明
.githooks/: pre-commit
OSFS课程设计通俗教程/: 00-十分钟看懂OSFS.md  01-CREATE到WRITE完整流程.md  02-磁盘布局与inode.md  03-用户表与二级目录.md  04-文件描述符与区间读写.md  05-直接块与一级间接块.md  06-FSCK与用户管理.md  07-测试地图与答辩问答.md  README.md
cmake/: MinikvManifest.cmake  MinikvSources.cmake  MinikvTestSuite.cmake  MinikvTesting.cmake  check_minikv_track_final_evidence.cmake  check_product_sources.cmake  check_project_docs_honesty.cmake  check_project_orientation_doc.cmake  check_receipt_builder_census.cmake  check_receipts_consolidation_note.cmake  check_test_manifest.cmake  minikv_test_runner.cpp.in  run_cli_log_level_smoke.cmake  run_osfs_smoke.cmake
config/: command-test-parts.txt  elegance-name-baseline.txt  elegance-round2-pin-audit.tsv  product-sources.txt  shard-test-parts.txt  test-cases.txt  test-source-size-baseline.txt  test-target-name-baseline.txt
d/: README.md
docs/: CAPABILITY-SNAPSHOT.md  CHANGELOG.md  SECURITY.md  TESTING.md  archive-retention-index.md  elegance-hotspot-closeout.md  elegance-name-census.md  elegance-round2-pin-audit.md  minikv-track-final-evidence.md  osfs-course-design-guide.md  osfs-coursework-delivery-v1630.md  osfs-coursework-delivery-v1633.md  production-excellence-progress.md  project-docs-honesty-matrix.md  receipts-consolidation-note.md
scripts/: archive_inventory.py  check_clang_format_changed_files.py  codex-bootstrap.ps1
src/: atomic_file_writer.cpp  atomic_file_writer.hpp  benchmark_main.cpp  client_history.cpp  client_main.cpp  command.cpp  command_catalog.cpp  command_contracts.cpp  command_dispatch.cpp  command_evidence_dispatch.cpp  command_evidence_dispatch.hpp  command_expiry_ops.cpp  command_introspection_ops.cpp  command_parse_helpers.cpp  command_parse_helpers.hpp  command_persistence_ops.cpp  command_response_formatters.cpp  command_smoke_formatters.cpp  command_string_ops.cpp  command_wal_gate.cpp  command_wal_gate.hpp  compared_package_audit_guards.cpp  compared_package_audit_slots.cpp  compared_package_audit_stages.cpp  compared_package_audit_validation.cpp  compared_package_intake_audit.cpp  line_editor.cpp  log.cpp  main.cpp  managed_audit_adapter_receipts.cpp  managed_audit_connection_receipts.cpp  managed_audit_core_receipts.cpp  managed_audit_receipt_utils.hpp  managed_audit_receipts.cpp  metrics_file.cpp  osfs_command_processor.cpp  osfs_directory.cpp  osfs_disk_layout.cpp  osfs_disk_layout.hpp  osfs_file_io.cpp  (+302 more)
tests/: artifact_digest_compatibility_matrix_tests.cpp  atomic_file_writer_tests.cpp  blocked_execution_rehearsal_split_non_participation_checks_tests.cpp  blocked_execution_rehearsal_split_non_participation_fixture_tests.cpp  blocked_execution_rehearsal_split_non_participation_stages_tests.cpp  blocked_execution_rehearsal_split_non_participation_tests.cpp  blocked_execution_rehearsal_split_non_participation_validation_tests.cpp  candidate_intake_packet_fixture_tests.cpp  candidate_intake_packet_guards_tests.cpp  candidate_intake_packet_slots_tests.cpp  candidate_intake_packet_stages_tests.cpp  candidate_intake_packet_tests.cpp  candidate_intake_packet_validation_tests.cpp  candidate_material_request_checks_tests.cpp  candidate_material_request_fixture_tests.cpp  candidate_material_request_integrity_checks_tests.cpp  candidate_material_request_integrity_fixture_tests.cpp  candidate_material_request_integrity_stages_tests.cpp  candidate_material_request_integrity_tests.cpp  candidate_material_request_integrity_validation_tests.cpp  candidate_material_request_items_tests.cpp  candidate_material_request_stages_tests.cpp  candidate_material_request_tests.cpp  candidate_material_request_validation_tests.cpp  candidate_material_submission_precheck_checkpoints_tests.cpp  candidate_material_submission_precheck_fixture_tests.cpp  candidate_material_submission_precheck_integrity_checks_tests.cpp  candidate_material_submission_precheck_integrity_fixture_tests.cpp  candidate_material_submission_precheck_integrity_stages_tests.cpp  candidate_material_submission_precheck_integrity_tests.cpp  candidate_material_submission_precheck_integrity_validation_tests.cpp  candidate_material_submission_precheck_tests.cpp  candidate_material_submission_precheck_validation_tests.cpp  candidate_material_submission_precheck_validators_tests.cpp  candidate_profile_section_checks_tests.cpp  candidate_profile_section_fixture_tests.cpp  candidate_profile_section_stages_tests.cpp  candidate_profile_section_tests.cpp  candidate_profile_section_validation_tests.cpp  candidate_request_package_checks_tests.cpp  (+333 more)
tools/: build_osfs_coursework_report.py
代码讲解记录/: 01-store-and-command.md  02-cli-main.md  03-server-main.md  04-tcp-server.md  05-tests-build-docs.md  06-client-main.md  07-version-2-build-docs.md  08-ttl-store-command.md  09-version-3-tests-docs.md  10-wal-core.md  100-explainjson-side-effects-hardening-core.md  101-version-49-tests-docs.md  102-explainjson-schema-digest-core.md  103-version-50-tests-docs.md  104-checkjson-execution-contract-core.md  105-version-51-tests-docs.md  106-checkjson-fixture-sample.md  107-version-52-tests-docs.md  108-checkjson-read-fixture-sample.md  109-version-53-tests-docs.md  11-version-4-tests-docs.md  110-storagejson-evidence-v54.md  111-restart-recovery-evidence-v55.md  112-recovery-fixture-index-v56.md  12-snapshot-core.md  13-version-5-tests-docs.md  14-benchmark-main.md  15-version-6-tests-docs.md  16-resp-parser-core.md  17-version-7-tests-docs.md  18-tcp-resp-integration.md  19-version-8-tests-docs.md  20-ping-resp-hardening.md  21-version-9-tests-docs.md  22-tcp-server-lifecycle.md  23-version-10-tests-docs.md  24-connection-metrics.md  25-version-11-tests-docs.md  26-server-limits-client-timeout.md  27-version-12-tests-docs.md  (+73 more)
代码讲解记录_治理/: README.md  production-readiness-walkthrough-template.md  批次整治记录.md  最近250版讲解清算审计.md
代码讲解记录_生产雏形阶段/: 113-version-57-recovery-index-boundaries.md  (+42 more)
(+3265 files in other folders)
